--- a/staytion-hub-client/src/styles/partials/_global.scss
+++ b/staytion-hub-client/src/styles/partials/_global.scss
@@ -1,6 +1,6 @@
-@use './mixins' as *;
-@use './variables' as *;
-@use './typography' as *;
+@forward 'mixins';
+@forward 'variables';
+@forward 'typography';
 
 * {
     box-sizing: border-box;
