--- a/staytion-hub-client/src/components/ReservationList/ReservationList.scss
+++ b/staytion-hub-client/src/components/ReservationList/ReservationList.scss
@@ -1,3 +1,10 @@
-.list {
-    width: 65%;
+@use "../../styles/partials/global" as *;
+
+.reservations {
+    &__navigation {
+        padding:2rem;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
 }
