--- a/staytion-hub-client/src/components/SideBar/SideBar.scss
+++ b/staytion-hub-client/src/components/SideBar/SideBar.scss
@@ -2,10 +2,11 @@
 
 
 .side-bar {
-    width:20%;
+    width:25%;
     height:100vh;
     background-color: $staytion-white;
-    border-radius: 0.5rem;
+    margin:2rem;
+    border-radius: 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -29,7 +30,7 @@
         margin: 0;
         padding: 0;
         display: flex;
-        // gap:2rem;
+        gap:0.5rem;
         flex-direction: column;
         text-align: center;
     }
@@ -49,15 +50,15 @@
 
         &:hover {
             // text-decoration: none;
-            color:blue;
+            color:$staytion-primary;
         }
 
         &--active {
-            // color:red;
+            color:$staytion-white;
             background-color: $staytion-primary;
 
             &:hover {
-                // text-decoration: none;
+                color:$staytion-white;
             }
         }
     }
