--- a/staytion-hub-client/src/components/ReservationList/ReservationList.scss
+++ b/staytion-hub-client/src/components/ReservationList/ReservationList.scss
@@ -7,4 +7,35 @@
         align-items: center;
         justify-content: space-between;
     }
+
+    &__container {
+        padding: 2rem;
+    }
+
+    &__list {
+        list-style-type: none;
+        display: flex;
+        flex-direction: row;
+        gap:1rem;
+        margin:0;
+        padding: 2rem 0;
+        justify-content: space-between;
+        border-bottom:1px solid $staytion-black;
+    }
+
+    &__list-item {
+        width:20%;
+
+        &--room-number {
+            width: 10%;
+        }
+
+        &--guests-number {
+            width: 10%;
+        }
+
+        &--action {
+            padding-left:3rem;
+        }
+    }
 }
