--- a/staytion-hub-client/src/components/SideBar/SideBar.scss
+++ b/staytion-hub-client/src/components/SideBar/SideBar.scss
@@ -59,6 +59,7 @@
 
             &:hover {
                 color:$staytion-white;
+                text-decoration: underline;
             }
         }
     }
