--- a/staytion-hub-client/src/components/Button/Button.scss
+++ b/staytion-hub-client/src/components/Button/Button.scss
@@ -8,17 +8,18 @@
     border: none;
     border-radius: 0.5rem;
     display:block;
-    // width:80%;
+    font-size: 16px;
     height: 3.5rem;
     font-family: 'Poppins';
     color:$staytion-white;
+    text-decoration: none;
 
     &--primary {
         background-color: $staytion-primary;
         border: none;
 
         &:hover {
-            background-color: aqua;
+            text-decoration: underline;
         }
     }
 
