add form details

--- a/staytion-hub-client/src/components/Button/Button.scss
+++ b/staytion-hub-client/src/components/Button/Button.scss
@@ -27,6 +27,10 @@
         background-color: $staytion-white;
         color: $staytion-black;
         border: 1px solid $staytion-black;
+
+        &:hover {
+            text-decoration: underline;
+        }
     }
 
 }
