--- a/staytion-hub-client/src/styles/partials/_variables.scss
+++ b/staytion-hub-client/src/styles/partials/_variables.scss
@@ -3,3 +3,4 @@ $staytion-primary: #048D8F;
 $staytion-secondary:#D2EEEF;
 $staytion-black:#13182C;
 $staytion-white: #fff;
+$staytion-gray: #757575;
