--- a/staytion-hub-client/src/styles/partials/_variables.scss
+++ b/staytion-hub-client/src/styles/partials/_variables.scss
@@ -4,3 +4,5 @@ $staytion-secondary:#D2EEEF;
 $staytion-black:#13182C;
 $staytion-white: #fff;
 $staytion-gray: #757575;
+$red:#ca371a;
+$green: #0e8e41;
