--- a/staytion-hub-client/src/components/ReservationList/ReservationList.scss
+++ b/staytion-hub-client/src/components/ReservationList/ReservationList.scss
@@ -2,14 +2,14 @@
 
 .reservations {
     &__navigation {
-        padding:2rem;
+        padding:2rem 2rem 0 2rem;
         display: flex;
         align-items: center;
         justify-content: space-between;
     }
 
     &__container {
-        padding: 2rem;
+        padding: 1rem 2rem 2rem 2rem;
     }
 
     &__label {
@@ -44,6 +44,16 @@
         &--action {
             padding-left:3rem;
         }
+    }
+
+    &__content {
+        // eight: 100vh;
+    overflow-y: auto;
+    width: 100%;
+    // width: 100%;
+    height: 70vh;
+    overflow-y: auto;
+    // border: 1px solid #ccc;
     }
 
     &__list {
