--- a/staytion-hub-client/src/components/SideBar/SideBar.scss
+++ b/staytion-hub-client/src/components/SideBar/SideBar.scss
@@ -6,14 +6,13 @@
     height:100vh;
     background-color: $staytion-white;
     margin:2rem;
+    padding: 2rem;
     border-radius: 1rem;
     display: flex;
     flex-direction: column;
-    align-items: center;
 
     &__logo-link {
-        width: 50%;
-        margin: 0 auto;
+        width: 60%;
         padding-top: 2rem;
     }
 
@@ -32,7 +31,6 @@
         display: flex;
         gap:0.5rem;
         flex-direction: column;
-        text-align: center;
     }
 
     &__list-item {
