add guest api, guests card

--- a/staytion-hub-client/src/pages/DashboardPage/DashboardPage.scss
+++ b/staytion-hub-client/src/pages/DashboardPage/DashboardPage.scss
@@ -11,6 +11,7 @@
     &__summary {
         padding: 0 2rem;
         display: flex;
+        // gap:rem;
         justify-content: space-between;
     }
 
