--- a/staytion-hub-client/src/components/Layout/Layout.scss
+++ b/staytion-hub-client/src/components/Layout/Layout.scss
@@ -3,7 +3,7 @@
 .layout {
     width: 80%;
     background-color: $staytion-white;
-    margin:2rem 2rem 0 0;
+    margin:2rem 2rem 2rem 0;
     border-radius: 1rem;
     height: 100vh;
 }
