--- a/staytion-hub-client/src/components/SideBar/SideBar.scss
+++ b/staytion-hub-client/src/components/SideBar/SideBar.scss
@@ -13,7 +13,7 @@
 
     &__logo-link {
         width: 60%;
-        padding-top: 2rem;
+        padding-top: 2rem 0 0 2rem;
     }
 
     &__logo {
