--- a/staytion-hub-client/src/components/GuestList/GuestList.scss
+++ b/staytion-hub-client/src/components/GuestList/GuestList.scss
@@ -22,7 +22,7 @@
         margin:0;
         padding: 2rem 0;
         justify-content: space-between;
-        border-bottom:1px solid $staytion-black;
+        border-bottom:1px solid $staytion-light-gray;
     }
 
     &__label-item {
@@ -40,10 +40,9 @@
     }
 
     &__content {
-    // overflow-y: auto;
-    width: 100%;
-    height: 70vh;
-    overflow-y: auto;
+        width: 100%;
+        height: 70vh;
+        overflow-y: auto;
     }
 
     &__list {
@@ -54,7 +53,9 @@
         margin:0;
         padding: 2rem 0;
         justify-content: space-between;
-        border-bottom:1px solid $staytion-black;
+        &:not(:last-of-type) {
+            border-bottom:1px solid $staytion-light-gray;
+        }
     }
 
     &__list-item {
@@ -67,6 +68,5 @@
         &--address {
             width: 25%;
         }
-
     }
 }
