--- a/staytion-hub-client/src/components/ReservationList/ReservationList.scss
+++ b/staytion-hub-client/src/components/ReservationList/ReservationList.scss
@@ -12,10 +12,6 @@
         padding: 1rem 2rem 2rem 2rem;
     }
 
-    &__label {
-
-    }
-
     &__label-list {
         list-style-type: none;
         display: flex;
@@ -26,8 +22,7 @@
         margin:0;
         padding: 2rem 0;
         justify-content: space-between;
-        border-bottom:1px solid $staytion-black;
-
+        border-bottom:1px solid $staytion-light-gray;
     }
 
     &__label-item {
@@ -38,23 +33,15 @@
             width: 10%;
         }
 
-        // &--guests-number {
-        //     width: 15%;
-        // }
-
         &--action {
             padding-left:3rem;
         }
     }
 
     &__content {
-        // eight: 100vh;
-    overflow-y: auto;
-    width: 100%;
-    // width: 100%;
-    height: 70vh;
-    // overflow-y: auto;
-    // border: 1px solid #ccc;
+        overflow-y: auto;
+        width: 100%;
+        height: 70vh;
     }
 
     &__list {
@@ -65,7 +52,9 @@
         margin:0;
         padding: 2rem 0;
         justify-content: space-between;
-        border-bottom:1px solid $staytion-black;
+        &:not(:last-of-type) {
+            border-bottom:1px solid $staytion-light-gray;
+        }
     }
 
     &__list-item {
@@ -74,10 +63,6 @@
         &--room-id {
             width: 10%;
         }
-
-        // &--guests-number {
-        //     width: 10%;
-        // }
 
         &--action {
             padding-left:3rem;
