--- a/staytion-hub-client/src/components/RoomList/RoomList.scss
+++ b/staytion-hub-client/src/components/RoomList/RoomList.scss
@@ -22,13 +22,12 @@
         margin:0;
         padding: 2rem 0;
         justify-content: space-between;
-        border-bottom:1px solid $staytion-black;
+        border-bottom:1px solid $staytion-light-gray;
     }
 
     &__label-item {
         width:20%;
         color:$staytion-gray;
-
 
         &--guest-name {
             width: 15%;
@@ -37,14 +36,12 @@
         &--address {
             width: 25%;
         }
-
     }
 
     &__content {
-    // overflow-y: auto;
-    width: 100%;
-    height: 70vh;
-    overflow-y: auto;
+        width: 100%;
+        height: 70vh;
+        overflow-y: auto;
     }
 
     &__list {
@@ -55,7 +52,9 @@
         margin:0;
         padding: 2rem 0;
         justify-content: space-between;
-        border-bottom:1px solid $staytion-black;
+        &:not(:last-of-type) {
+            border-bottom:1px solid $staytion-light-gray;
+        }
     }
 
     &__list-item {
@@ -68,6 +67,5 @@
         &--address {
             width: 25%;
         }
-
     }
 }
