--- a/staytion-hub-client/src/components/SideBar/SideBar.scss
+++ b/staytion-hub-client/src/components/SideBar/SideBar.scss
@@ -1,8 +1,7 @@
 @use "../../styles/partials/global" as *;
 
-
 .side-bar {
-    width:20%;
+    width:18%;
     height:100vh;
     background-color: $staytion-white;
     margin:2rem;
@@ -13,7 +12,7 @@
 
     &__logo-link {
         width: 60%;
-        padding-top: 2rem 0 0 2rem;
+        padding: 2rem 0 0 2rem;
     }
 
     &__logo {
@@ -40,14 +39,11 @@
     &__link {
         text-decoration: none;
         display: block;
-        // width:100%;
-        // border-radius: 0.5rem;
         color:inherit;
         padding: 1rem 2rem;
         border-radius: 0.5rem;
 
         &:hover {
-            // text-decoration: none;
             color:$staytion-primary;
         }
 
