--- a/staytion-hub-client/src/styles/partials/_variables.scss
+++ b/staytion-hub-client/src/styles/partials/_variables.scss
@@ -4,5 +4,6 @@ $staytion-secondary:#D2EEEF;
 $staytion-black:#13182C;
 $staytion-white: #fff;
 $staytion-gray: #757575;
+$staytion-light-gray: #b5b5b5;
 $red:#eb1010;
 $green: #11e465;
