--- a/staytion-hub-client/src/App.scss
+++ b/staytion-hub-client/src/App.scss
@@ -5,6 +5,10 @@ body {
     background-color: $staytion-background;
 }
 
+h1, h3 {
+    font-weight:600;
+}
+
 #root {
     display: flex;
     flex-wrap: nowrap;
