--- a/staytion-hub-client/src/components/ReservationList/ReservationList.scss
+++ b/staytion-hub-client/src/components/ReservationList/ReservationList.scss
@@ -6,6 +6,11 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+        gap:1rem;
+    }
+
+    &__title {
+        flex:1;
     }
 
     &__container {
